test/fail/type-alias-path/importM2.mo
import M "m2";

module {
  public func m() : M.MyType = M.m();
}
